--- a/main.html
+++ b/main.html
@@ -3,13 +3,51 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+     <table border="1px solid black" border-collapse="collapse" width="100%">
+		 <thead style = color:white;background-color:orange;>
+			 <tr>
+				<th width=100 align=left >Part</th> 
+				 <th width=100 align=left>XS</th> 
+				 <th width=100 align=left>S</th> 
+				 <th width=100 align=left>M</th> 
+				 <th width=100 align=left>L</th> 
+				 <th width=100 align=left>XL</th> 
+			 </tr>
+		 </thead>
+		 <tbody>
+			 <tr>
+				 <td width=100 align=left style=color:white;background-color:brown;>Waist</td>
+				  <td width=100 align=right style=color:white;background-color:seagreen;>25</td>
+				  <td width=100 align=right style=color:white;background-color:seagreen;>28</td>
+				   <td width=100 align=right style=color:white;background-color:seagreen;>30</td>
+				  <td width=100 align=right style=color:white;background-color:seagreen;>31</td>
+				  <td width=100 align=right  style=color:white;background-color:seagreen;>32</td>
+			 </tr>
+
+			  <tr>
+				 <td width=100 align=left style=color:white;background-color:brown;>Chest</td>
+				  <td width=100 align=right style=color:white;background-color:seagreen;>34</td>
+				  <td width=100 align=right style=color:white;background-color:seagreen;>34</td>
+				   <td width=100 align=right style=color:white;background-color:seagreen;>38</td>
+				  <td width=100 align=right style=color:white;background-color:seagreen;>40</td>
+				  <td width=100 align=right style=color:white;background-color:seagreen;>41</td>
+			 </tr>
+
+			  <tr>
+				 <td width=100 align=left style=color:white;background-color:brown;>Sleeve</td>
+				  <td width=100 align=right style=color:white;background-color:seagreen;>23</td>
+				  <td width=100 align=right style=color:white;background-color:seagreen;>24</td>
+				   <td width=100 align=right style=color:white;background-color:seagreen;>24</td>
+				  <td width=100 align=right style=color:white;background-color:seagreen;>25</td>
+				  <td width=100 align=right style=color:white;background-color:seagreen;>25</td>
+			 </tr>
+		 </tbody>
+
 
 </body>
 
